--- a/style.css
+++ b/style.css
@@ -155,10 +155,13 @@ body {
 }
 
 @media (max-width: 767px) {
-	.review-card1, .review-card3 {
+	.review-card1,
+	.review-card3 {
 		display: none !important;
 	}
-	.review-card2, .review-card2-img, .review-card2-body {
+	.review-card2,
+	.review-card2-img,
+	.review-card2-body {
 		display: flex;
 		justify-content: center;
 		text-align: center;
@@ -183,5 +186,5 @@ body {
 }
 
 .contact-btn {
-	margin: 2%
+	margin: 2%;
 }
